# false-sharing-micro24

./: .gitignore  README.md
false-sharing-benchmarks/: .clang-format  .clang-tidy  .dir-locals.el  CMakeLists.txt  README.md  script_run.sh
false-sharing-benchmarks/bench_input/huron/linear_reg/: key_file_50KB.txt
false-sharing-benchmarks/benchmarks/: CMakeLists.txt
false-sharing-benchmarks/benchmarks/featherlight/: CMakeLists.txt  README.md
false-sharing-benchmarks/benchmarks/featherlight/microbenchmarks-small-input/: CMakeLists.txt  Makefile  a.out  perf.data  test1-small-manual.cpp  test1-small.cpp  test10-small-manual.cpp  test10-small.cpp  test2-small.cpp  test3-small-manual.cpp  test3-small.cpp  test4-small-manual.cpp  test4-small.cpp  test5-small.cpp  test6-small-manual.cpp  test6-small.cpp  test7-small.cpp  test8-small-manual.cpp  test8-small.cpp  test9-small-manual.cpp  test9-small.cpp
false-sharing-benchmarks/benchmarks/huron/: CMakeLists.txt
false-sharing-benchmarks/benchmarks/huron/boost_spinlock/: CMakeLists.txt  spinlock.hpp  spinlock_pool.cpp  spinlock_pool.hpp  spinlock_pool_manual.cpp  spinlock_pool_manual.hpp
false-sharing-benchmarks/benchmarks/huron/linear_regression/: CMakeLists.txt  linear_regression_pthread.c  linear_regression_pthread_manual.c  th_152.txt  th_40.txt  th_448.txt  th_744.txt
false-sharing-benchmarks/benchmarks/huron/locked/: CMakeLists.txt  toy.c  toy_manual.c
false-sharing-benchmarks/benchmarks/huron/lockless/: CMakeLists.txt  toy.c  toy_manual.c
false-sharing-benchmarks/benchmarks/huron/ref_count/: CMakeLists.txt  a.out  shared_ptr_fs.cpp  shared_ptr_fs_manual.cpp
false-sharing-benchmarks/benchmarks/huron/string_match/: CMakeLists.txt  MapReduceScheduler.h  stddefines.h  string_match_pthreads.c  string_match_pthreads_manual.c  string_match_pthreads_original.c
false-sharing-benchmarks/benchmarks/synchrobench/: README.md
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/: .gitignore  Makefile  Makefile.x86_64.linux
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/common/: Makefile.common
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/scripts/: avg.sh  run.sh
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/hashtables/lockbased-ht/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/hashtables/lockbased-ht-man/: Makefile  hashtable-lock.h
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/hashtables/lockbased-ht-ts-sep/: Makefile  hashtable-lock.h  test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/hashtables/lockfree-ht/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/linkedlists/lazy-list/: lazy.c  linkedlist-lock.h  test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/linkedlists/lazy-list-man/: Makefile  lazy.c  linkedlist-lock.h
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/linkedlists/lazy-list-pad/: Makefile  coupling.c  lazy.c  linkedlist-lock.h  test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/linkedlists/lazy-list-ts-sep/: Makefile  linkedlist-lock.c  linkedlist-lock.h  test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/linkedlists/lock-coupling-list/: lazy.c  linkedlist-lock.h  test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/linkedlists/lockfree-list/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/linkedlists/selfish/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/linkedlists/versioned/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/skiplists/fraser/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/skiplists/nohotspot/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/skiplists/numask/: test.cpp
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/skiplists/rotating/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/skiplists/sequential/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/skiplists/skiplist-lock/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/trees/: CMakeLists.txt
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/trees/avl/: test.c  test_nested.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/trees/lfbstree/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/trees/newavltree/: test.c  test_nested.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/trees/rbtree/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/trees/sftree/: test.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/trees/sftree-man/: Makefile  intset.c  sftree.c  test.c  test_nested.c
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/trees/tree-lock/: CMakeLists.txt  README.txt  citrus.c  citrus.h  new_urcu.c  test.c  urcu.h
false-sharing-benchmarks/benchmarks/synchrobench/c-cpp/src/utils/estm-0.3.0/src/: gc.c
false-sharing-benchmarks/m5_library/: CMakeLists.txt  hooks_prospar.c  hooks_prospar.h
false-sharing-benchmarks/microbenchmarks/: CMakeLists.txt  both-false-and-true-sharing.c  both-true-and-false-sharing.c  false-sharing-char.c  false-sharing-long.c  false-sharing-short.c  false-sharing.c  fs-ts-diffline.c  fs-ts-sameline.c  no-false-sharing.c  proportional-fs.c  proportional-ts.c  repetitive-fs-ts-diffline.c  repetitive-fs-ts-sameline.c  true-sharing.c
false-sharing-resources/: .gitignore
false-sharing-resources/prospar/: README.md
false-sharing-resources/src/spec-2006/: README.md
gem5-false-sharing/: .clang-format  .dir-locals.el  .projectile  .spellignore  SConstruct  pyrightconfig.json  setup.cfg
gem5-false-sharing/prospar/: README.md  bash-ini-parser  benchmarkList.txt  build-benchmark.sh  cfgparser.py  feather-benchmark-ini.sh  fs.ini.example  huron-benchmark-ini.sh  input-huron-benchmark.sh  run-all-ini.sh  run-all.sh  run-benchmark-ini.sh  run-benchmark.sh  run-feather.sh  run-huron.sh  run-microbenchmark.sh
gem5-false-sharing/util/: git-pre-commit.py
(+137 files in other folders)
