cmake_minimum_required(VERSION 3.18 FATAL_ERROR)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
include_directories(${M5_PATH})
add_executable(feather-test1-small test1-small.cpp)
add_executable(feather-test2-small test2-small.cpp)
add_executable(feather-test3-small test3-small.cpp)
add_executable(feather-test4-small test4-small.cpp)
add_executable(feather-test5-small test5-small.cpp)
add_executable(feather-test6-small test6-small.cpp)
add_executable(feather-test7-small test7-small.cpp)
add_executable(feather-test8-small test8-small.cpp)
add_executable(feather-test9-small test9-small.cpp)
add_executable(feather-test1-small-manual test1-small-manual.cpp)
add_executable(feather-test3-small-manual test3-small-manual.cpp)
add_executable(feather-test4-small-manual test4-small-manual.cpp)
add_executable(feather-test6-small-manual test8-small-manual.cpp)
add_executable(feather-test8-small-manual test8-small-manual.cpp)
add_executable(feather-test9-small-manual test9-small-manual.cpp)
add_executable(feather-test10-small test10-small.cpp)

if(${CUSTOM_HOOK})
    target_link_libraries(feather-test1-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test2-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test3-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test4-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test5-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test6-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test7-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test8-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test9-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test10-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test1-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test3-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test4-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test6-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test8-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test9-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
elseif(${STATIC_BINARY})
    target_link_libraries(feather-test1-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test2-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test3-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test4-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test5-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test6-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test7-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test8-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test9-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test10-small PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test1-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test3-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test4-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test6-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test8-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
    target_link_libraries(feather-test9-small-manual PRIVATE Threads::Threads PRIVATE libhooks_prospar)
else()
    target_link_libraries(feather-test1-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test2-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test3-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test4-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test5-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test6-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test7-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test8-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test9-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test10-small PRIVATE Threads::Threads)
    target_link_libraries(feather-test1-small-manual PRIVATE Threads::Threads)
    target_link_libraries(feather-test3-small-manual PRIVATE Threads::Threads)
    target_link_libraries(feather-test4-small-manual PRIVATE Threads::Threads)
    target_link_libraries(feather-test6-small-manual PRIVATE Threads::Threads)
    target_link_libraries(feather-test8-small-manual PRIVATE Threads::Threads)
    target_link_libraries(feather-test9-small-manual PRIVATE Threads::Threads)
endif()